--- a/icons.qrc
+++ b/icons.qrc
@@ -6,5 +6,6 @@
         <file>icons/settings.png</file>
         <file>icons/themes.png</file>
         <file>icons/users_icon.png</file>
+        <file>icons/auth1.png</file>
     </qresource>
 </RCC>
